Fix some spacings and remove div bg colors

--- a/www/styles.css
+++ b/www/styles.css
@@ -1,29 +1,8 @@
 body {
     background-color: #474747;
-    
     height: 100vh;
     display: flex;
     align-items: center;
-}
-
-.wrapper {
-    background-color: pink;
-}
-    
-.section1 {
-    background-color: red;
-}
-
-.section2 {
-    background-color: lightblue;
-}
-
-.section3 {
-    background-color: purple;
-}
-
-.content1, .content2, .content3 {
-    background-color: lightgreen;
 }
 
 /* layout made with floating sections */
@@ -41,8 +20,8 @@ body {
     width: 332px;
 }
 .section2 {
-    padding-left: 96px;
-    width: 396px;
+    padding-left: 72px;
+    width: 372px;
     height: 100%;
 }
 
@@ -51,7 +30,7 @@ body {
     top: 50%;
     transform: translate(0, -50%);
    
-    width: 25%;
+    width: 30%;
     min-width: 300px;
 }
 
@@ -83,7 +62,7 @@ a, p {
     font-family: 'Open Sans', sans-serif;
 }
 
-a {
+a, a:visited {
     color: white;
     text-decoration: underline;
 }
@@ -105,6 +84,10 @@ i {
     font-size: 24px;
 }
 
+/* anchor color */
+a:hover, a:active, i:hover {
+    color: #ffa3a3;
+}
 
 /* spacings */
 .profilepic {
@@ -112,7 +95,6 @@ i {
 }
 
 .socialbar {
-    background-color: black;
     height: 24px;
     margin-top: 8px;
 }
@@ -124,8 +106,13 @@ p {
 
 .cvtext {
     margin-top: 24px;
-    margin-bottom: 32px;
 }
+
+@media (max-width: 728px) {
+    .cvtext {
+        margin-bottom: 32px;
+    }
+}    
 
 .social {
     margin-left: 24px;
@@ -138,6 +125,7 @@ p {
 .findmeon {
 }
 
+/* round profile picture */
 .profilepic {
     border-radius: 50%;
     border: 2px solid white;
